--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -1,12 +1,2 @@
-img {
-    width: 100%;
-}
-
-header a {
-    font-size: 2em;
-    text-decoration: none;
-}
-
-footer p {
-    text-align: center;
-}
+img { width: 100%; }
+header, footer { text-align: center; }
