--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -1,2 +1,2 @@
-header, footer { text-align: center; }
+footer { text-align: center; }
 time { display: block; text-align: right; font-style: italic; }
