--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -1,2 +1,4 @@
+body { padding: 1em; }
 footer { text-align: center; }
 time { display: block; text-align: right; font-style: italic; }
+li {margin: 0.5em 0;}
